# bin2cpp

./: .gitignore  README.md  build.bat
build-msvc/: bin2cpp.sln  bin2cpp.vcxproj  build.bat
msvc/: bin2cpp.vcxproj
new/: CMakeLists.txt
new/src/: main.cpp
src/: main.cpp
test/: build-and-run-cpp-test.bat  example.cpp  run-tests.bat  test.cpp
